--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -34,7 +34,12 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 1em;
+}
+
+.justify-text {
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .read-the-docs {
